[package]
name = "todo-list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home = "0.5"
serde_json = "1.0" 
structopt = "0.3"

[dependencies.chrono]
# Need the serde feature for the chrono crate, so we can serialize the DateTime field.
features = ["serde"]
version = "0.4"

# Add serde in its own section.
[dependencies.serde]
 # Need the derive feature.
features = ["derive"]
version = "1.0"